Use configureEach when configuring gradle tasks

--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,11 @@ publishing {
     }
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
-tasks.withType(Javadoc) {
+tasks.withType(Javadoc).configureEach {
     options.encoding = 'UTF-8'
     options.quiet()
 }
