--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
 
+libsdl4j_version=1.6
+
 # Used for GitHub workflow to build SDL2 binaries
 sdl2_version=2.30.10
 sdl2_commit=9c821dc21ccbd69b2bda421fdb35cb4ae2da8f5e
