Add build workflow

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
 
-libsdl4j_version=1.6
+controllable_sdl_version=1.0
 
 # Used for GitHub workflow to build SDL2 binaries
 sdl2_version=2.30.10
