--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,4 @@
  * This project uses @Incubating APIs which are subject to change.
  */
 
-rootProject.name = 'controllable-sdl'
+rootProject.name = 'ControllableSDL'
