Fix publication artifact name

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ def env = { String key ->
 publishing {
     publications {
         mavenJava(MavenPublication) {
+            artifactId base.archivesName.get()
             from components.java
         }
     }
